<resources>
    <string name="app_name">Smytex</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_top_text">Sign in with \nSmytex account</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="email_address">Email ID</string>
    <string name="dob">Date Of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="select_genre">Select Genre</string>
    <string name="description">Description</string>
    <string name="cat_desc">Details Here \nRock was best around 80s \nand has been prevelant \nthrough the 2005</string>
    <string name="about_dummy">I like being free and playing guitar</string>
    <string name="age">25</string>
    <string name="gender_female">F</string>
    <string name="gender_male">M</string>
    <string name="dummy_followers_count">10</string>
    <string name="dummy_time_ago">22 min ago</string>
    <string name="dummy_name"></string>
    <string name="categories">Categories</string>
    <string name="dummy_image">https://randomuser.me/api/portraits/men/33.jpg</string>
    <string name="tab_search">SEARCH USER</string>
    <string name="tab_live_videos">LIVE VIDEOS</string>
    <string name="tab_all_videos">ALL VIDEOS</string>
    <string name="dummy_number">""</string>
    <string name="follow">Follow</string>
    <string name="challenges">Challenges</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="videos">Videos</string>
    <string name="user_profile">User Profile</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="time">Time:</string>
    <string name="round">Rounds:</string>
    <string name="ongoing">Ongoing</string>
    <string name="complete">Complete</string>
    <string name="select_tone">Select Tone</string>
    <string name="upload_video">Upload Video</string>
    <string name="discard_and_record">Discard and record another video</string>
    <string name="title">Title</string>
    <string name="write_a_title">Write A Title Here</string>
    <string name="genre">Genre</string>
    <string name="share_with">Share With</string>
    <string name="total_round">Total Rounds: </string>
    <string name="challenge_dummy_text">Challenge 1</string>
    <string name="details">Details</string>
    <string name="challange">Challenge:</string>
    <string name="challange_status">Challenge Status:</string>
    <string name="date">Date:</string>
    <string name="rounds">Number of Rounds</string>
    <string name="post_challenge">Post Challenge</string>
    <string name="friend_name">Friend Name</string>
    <string name="err_enter_name">Enter Your Name!</string>
    <string name="err_pass">Enter Your Password!</string>
    <string name="err_email">Enter Your Email</string>
    <string name="err_first_name">Enter First Name!</string>
    <string name="err_status">Enter Your Status!</string>
    <string name="err_last_name">Enter Last Name!</string>
    <string name="err_phone_number">Enter Your Phone Number!</string>
    <string name="err_dob">Enter Date Of Birth!</string>
    <string name="err_re_enter_pass">Enter Second Password</string>
    <string name="err_password_mismatch">Password Mismatch!</string>
    <string name="success_signup">Successfully SignUp</string>
    <string name="congratulation">Congratulations</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="did_you_forgot_your_password">Did you forgot your password?</string>
    <string name="please_fill_the_details_to_get_the_password">Please fill the details to get the password</string>
    <string name="send_password">Send Password</string>
    <string name="round_timing">Round %s Timing</string>
    <string name="round_date">Round %s Date</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">Start Date</string>
    <string name="twenty_four_hours_err_msg">Time difference must be greater than 24 hours in %s round</string>
    <string name="one_hours_err_msg">Time difference must be greater than 1 hours in %s round</string>
    <string name="err_post_challenge_title">Title Cant Left Blank!</string>
    <string name="err_user_name">Enter user name</string>
    <string name="gender">Gender</string>
    <string name="ago">ago</string>
    <string name="comments">%d Comments</string>
    <plurals name="numberOfComments">
        <item quantity="zero">%d comment</item>
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <plurals name="numberOfViews">
        <item quantity="zero">%d View</item>
        <item quantity="one">%d View</item>
        <item quantity="other">%d Views</item>
    </plurals>
    <plurals name="numberOfLikes">
        <item quantity="zero">%d Like</item>
        <item quantity="one">%d Like</item>
        <item quantity="other">%d Likes</item>
    </plurals>
    <plurals name="numberOfVotes">
        <item quantity="zero">%d Vote</item>
        <item quantity="one">%d Vote</item>
        <item quantity="other">%d Votes</item>
    </plurals>
    <string name="delete">Delete</string>
    <string name="delete_challenge">Delete Challenge</string>
    <string name="dummy_video_url">http://198.57.172.197:1935/vod/_definst_/myStream_2_1482595610597/playlist.m3u8</string>
    <string name="dummy_image_url">http://www.whatsupguys.in/demo/smyt/thumbnail/img2.png</string>
    <string name="change_picture">Change Picture</string>
    <string name="status">Status</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="application">Application</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="setting">Setting</string>
    <string name="alert">Alert</string>
    <string name="delete_video_alert_msg">Do you want to delete this video</string>
    <string name="delete_challenge_alert_msg">Do you want to delete this challenge</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="followed">Followed</string>
    <string name="loading_data">Working! Please Wait...</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="dummy_m3u8_video">http://184.72.239.149/vod/mp4:BigBuckBunny_115k.mov/playlist.m3u8</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_select_friend_first">You must select friend first!</string>
    <string name="update">Update</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="post_video">Post Video</string>
    <string name="vs">VS</string>
    <string name="round_txt">"Round "</string>
    <string name="enter_your_friend_name">Enter your friend name</string>
    <string name="take_picture">Take Picture</string>
    <string name="select_picture">Select Picture</string>
    <string name="err_cno_comment">Please Enter Comment First!</string>
    <string name="draw">Draw</string>
    <string name="title_activity_profile_image_full_screen">ProfileImageFullScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_to_premium">Add To Premium</string>
    <string name="add_to_banner">Add To Banner</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnecting">Disconnecting...</string>
    <string name="unfollow">Unfollow</string>
    <string name="banner_added_success">Banner Added Successfully!</string>
    <string name="video_added_successfully">Video Added Succssfully!</string>
    <string name="no_video_available">No Video Available!</string>
    <string name="premium_category">13</string>
    <string name="not_played">NOT PLAYED</string>
    <string name="round_start_in">Round Start In</string>
    <string name="waiting">waiting...</string>
    <string name="background_music">Background Music</string>
    <string name="on">ON</string>
    <string name="source">Source</string>
    <string name="new_challenges">New Challenges</string>
    <string name="log_out">Log Out</string>
    <string name="orders">Orders</string>
    <string name="in_app_packages">In App Packages</string>
    <string name="your_orders">Your Orders</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="add_video_to_banner_pckg">Add Videos To Banner Packages</string>
    <string name="add_video_to_premium_cat_pckg">Add Videos To Premium Categories Packages</string>
    <string name="add_video_to_premium_banner_pckg">Add Videos To Premium Category Banner Packages</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="auto_start_recording">Auto Start Recording</string>
    <string name="valid_till">Valid Till - </string>
    <string name="remaining_videos">Remaining Videos - </string>
    <string name="voting_open">Voting Open</string>
    <string name="developed_by_text">Developed By: freshtechapps</string>
    <string name="developed_website">http://www.freshtechapps.com</string>
    <string name="click_for_desc">Click For Description</string>
    <string name="err_msg_copy_challenge">This is the copy of challenge, You can not vote on this</string>
    <string name="voting_closed">Voting Closed</string>
    <string name="make_it_live">Make It Live</string>
    <string name="start_recording_video">Start Recording Video</string>
    <string name="delete_video">Delete Video</string>
    <string name="favorites">FAVORITES</string>
    <string name="audios">AUDIOS</string>
    <string name="feeds">FEEDS</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="active">Active</string>
    <string name="info">Info</string>
    <string name="record">Record</string>
    <string name="err_round_time_gone">Round Time Has Gone!</string>
    <string name="android">android</string>
    <string name="rules">Rules</string>
    <string name="recently_active">Recently Active</string>
    <string name="go_live">Go Live</string>
    <string name="challenge_n_someone">Challenge\n Someone</string>
    <string name="upload_music">Upload Music</string>
    <string name="notification">Notification</string>
    <string name="my_feeds">My Feeds</string>
    <string name="m_challenges">My Challenges</string>
    <string name="completed">Completed</string>
    <string name="post">POST</string>
    <string name="cancel_upload">CANCEL UPLOAD</string>
    <string name="feature_coming_soon">This Feature Coming Soon...</string>
    <string name="respond">Respond</string>
    <string name="new_challenge">New Challenge</string>
    <string name="no_notification_available">No Notification Found!</string>
    <string name="search_result">Search Result</string>
    <string name="go_live_upload_video">Go Live/ Upload Video</string>
    <string name="following_followers">Following/Followers</string>
    <string name="attach_music_file">Attach Music File</string>
    <string name="music">Music</string>
    <string name="select_a_musicfile_to_upload_from_your_device">Select a musicfile to upload from your device</string>
    <string name="challenge_posted_success">Challenge posted successfully!</string>
</resources>