<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical"
    android:padding="@dimen/twenty_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.neopixl.pixlui.components.textview.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifty_dp"
            android:gravity="center"
            android:text="@string/did_you_forgot_your_password"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_four_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:gravity="center"
            android:text="@string/please_fill_the_details_to_get_the_password"
            android:textColor="@color/white"
            android:textSize="@dimen/fourteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />


        <com.neopixl.pixlui.components.textview.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eighty_dp"
            android:text="@string/email_address"
            android:textColor="@color/white"
            android:textSize="@dimen/fifteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_white_full"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="@dimen/ten_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Regular.ttf" />
    </LinearLayout>

    <com.neopixl.pixlui.components.button.Button
        android:id="@+id/signInBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/fourty_dp"
        android:background="@drawable/rounded_corner_yellow"
        android:text="@string/send_password"
        android:textAllCaps="false"
        android:textSize="@dimen/eighteen_sp"
        pixlui:typeface="Roboto-Medium.ttf" />
</FrameLayout>