<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation_size"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/addVideoToBannerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:padding="@dimen/ten_dp"
            android:text="@string/add_to_banner"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/addVideoToPremiumTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:padding="@dimen/ten_dp"
            android:text="@string/add_to_premium"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/deleteVideoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:padding="@dimen/ten_dp"
            android:text="@string/delete"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />
    </LinearLayout>
</android.support.v7.widget.CardView>