<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/ten_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/seventy_dp"
        android:orientation="vertical">

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/challengeHeaderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:paddingBottom="@dimen/ten_dp"
            android:text="@string/challenge_dummy_text"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <include layout="@layout/challenge_header" />

        <com.neopixl.pixlui.components.textview.TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:layout_marginTop="@dimen/ten_dp"
            android:paddingBottom="@dimen/ten_dp"
            android:text="@string/details"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/challengesRoundRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourty_dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.neopixl.pixlui.components.button.Button
            android:id="@+id/acceptBT"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/flat_yellow_thick_border"
            android:text="@string/accept"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/color_primary_with_eight_eight"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.button.Button
            android:id="@+id/declineBT"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/ten_dp"
            android:background="@drawable/flat_black_thick_border"
            android:text="@string/decline"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/color_primary_with_eight_eight"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />
    </LinearLayout>
</RelativeLayout>