<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:id="@+id/activity_post_new_video"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.divyanshu.smyt.CustomViews.SingleVideoPlayerCustomView
        android:id="@+id/singleVideoPlayer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/black_gradient_bg"
        android:orientation="vertical"
        android:padding="@dimen/five_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/titleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/fourteen_sp"
                pixlui:typeface="Roboto-Regular.ttf" />

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:padding="@dimen/five_dp"
                android:text="@string/share_with"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/fourteen_sp"
                pixlui:typeface="Roboto-Regular.ttf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.example.divyanshu.smyt.CustomViews.RoundedImageView
                    android:id="@+id/userIV"
                    android:layout_width="@dimen/fourty_dp"
                    android:layout_height="@dimen/fourty_dp"
                    android:src="@drawable/noimage" />

                <com.neopixl.pixlui.components.textview.TextView
                    android:id="@+id/sharedWithNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="2"
                    android:padding="@dimen/five_dp"
                    android:text="@string/first_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/sixteen_sp"
                    pixlui:typeface="Roboto-Medium.ttf" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/postVideoTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="2"
                android:padding="@dimen/ten_dp"
                android:text="@string/post"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sixteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/deleteVideoTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="2"
                android:padding="@dimen/ten_dp"
                android:text="@string/cancel_upload"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sixteen_sp"
                pixlui:typeface="Roboto-Medium.ttf" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
