<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.divyanshu.smyt.UserProfileFragments.FeedsParentFragment">


    <FrameLayout
        android:id="@+id/fragmentContainerFL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/thirty_six_dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourty_dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/videosTV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/videos"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/audiosTV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:maxLines="2"
            android:text="@string/audios"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/favoriteTV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/favorites"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Roboto-Medium.ttf" />
    </LinearLayout>


</FrameLayout>
